--- a/themes/mukurtu_v4/css/style.css
+++ b/themes/mukurtu_v4/css/style.css
@@ -976,6 +976,21 @@ a:not(.primary-nav__menu-link) svg.tel path {
           margin-block-start: var(--v-space-5xs);
 }
 
+.media-asset--slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  inline-size: 100%;
+}
+.media-asset--slide > .media {
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+}
+
 #javali-popup {
   inline-size: auto !important;
   max-inline-size: 1000px !important;
